--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
-<h1>
-  {{title}}
-</h1>
+<h1>Hot Weather Widget</h1>
+<div class="element">
+  <app-select></app-select>
+  <div class="element-right">
+    <app-temperature></app-temperature>
+    <app-description></app-description>
+  </div>
+  <div class="clear"> </div>
+</div>
+<div class="copy-right">
+  <p>© 2015 Hot Weather Widget. All rights reserved | Design by  <a href="http://w3layouts.com/" target="_blank">  W3layouts </a></p>
+</div>
