--- a/src/app/temperature/temperature.component.html
+++ b/src/app/temperature/temperature.component.html
@@ -2,6 +2,6 @@
   <h5>Et harum quidem</h5>
   <span class="w-line"> </span>
   <span class="cloud"> </span>
-  <h2>14<sup class="degree">°</sup></h2>
+  <h2>{{city.temperature}}<sup class="degree">°</sup></h2>
   <h6>Water 20<sup class="degree">°</sup></h6>
 </div>
